# simple-code-execution

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_server.py  setup.py  validate_dataset.py
.github/workflows/: docs.yml
code_execution/: __init__.py  code_trees.py  configs.py  data_structures.py  entrypoints.py  execution.py  file_writing.py  metrics.py  processing.py  utils.py
code_execution/eval_dataset/: __init__.py  apps.py  code_contests.py  eval_utils.py  gsm8k.py  metrics.py
code_execution/executables/: __init__.py  base.py  subproc.py
code_execution/processors/: README.md  __init__.py  utils.py
code_execution/processors/python/: __init__.py  percent_passed.py  py_coverage.py
code_execution/server/: __init__.py  cli.py  concurrency.py  config.py  main.py  models.py  service.py
code_execution/utility_modules/: __init__.py  safeguard.py
code_execution/utils/: timer.py  utils.py
docs/: Makefile  conf.py  index.rst  make.bat  quickstart.rst  requirements.txt
docs/_static/: .gitkeep
docs/api/: code_execution.rst  modules.rst
tests/: code_trees_test.py  conftest.py  entrypoints_test.py  execution_test.py  file_writing_test.py  processing_test.py
tests/eval_dataset/: code_contests_data.json  code_contests_test.py  gsm8k_test.py  gsm8k_test.py.old
tests/executables/: subproc_test.py
tests/processors/: conftest.py  processors_utils_test.py  py_coverage_test.py  py_percent_passed_test.py
tests/server/: __init__.py  test_concurrency.py  test_config.py  test_e2e_integration.py  test_main_integration.py  test_server.py  test_service.py
