[project]
name = "simple-code-execution"
version = "0.1.0"
authors = [
    { name="Gabriel Orlanski", email="gabeorlanski@gmail.com" }
]
description = "A simple library for running anonymous code execution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
    "numpy>=1.26",
    "aiofiles>=22.1.0",
    "tqdm>=4.60.0",
    "ujson>=5.10.0"
]
license = {file = "LICENSE"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_execution"]


[tool.isort]
profile='black'
single_line_exclusions = ["typing"]
force_single_line = true
skip = [".gitignore", ".dockerignore"]
extend_skip_glob = [".vscode/*","scratch/*","debug_code/*", "repos/*", "data/*"]
line_length = 80

[tool.black]
line-length=80
extend-exclude='''
(
    ^/repos/*|^/data/*|^/scratch/linting/*
)'''

[tool.pylint]
disable=['logging-fstring-interpolation']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore=src --ignore=data"
testpaths = [
    "tests"
]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
